# skytemple_view_migration

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
skytemple_view_migration/: __init__.py  collect_info.py  files.py  model.py  output.py  phase_one.py  phase_three.py  phase_two.py  ui_xml.py  util.py
